# FrameHunter

./: .dockerignore  .gitignore  Dockerfile  GIT_WORKFLOW_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
framehunter/: __init__.py  cli.py  downloader.py  models.py  search.py  similarity.py  utils.py  video_decoder.py
tests/: test_search.py  test_utils.py
